fix(player): plyr layout live button spacing

--- a/packages/vidstack/player/styles/plyr/theme.css
+++ b/packages/vidstack/player/styles/plyr/theme.css
@@ -560,6 +560,10 @@ a.plyr__control::before {
   z-index: 2;
 }
 
+[data-live] .plyr__progress .plyr__slider {
+  color: var(--plyr-progress-live-color, var(--plyr-color-main));
+}
+
 .plyr__slider__buffer {
   -webkit-appearance: none;
   background: transparent;
@@ -1143,6 +1147,7 @@ a.plyr__control::before {
 
 .plyr__live-button {
   background-color: unset !important;
+  margin-left: calc(var(--plyr-control-spacing, 10px) * 1.5) !important;
 }
 
 .plyr__live-button[data-focus] {
